Reset for Retake

--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,154 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="94n-KI-rhX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
     </dependencies>
-    <scenes>
-        <!--User List Controller-->
-        <scene sceneID="art-Mp-rMw">
-            <objects>
-                <tableViewController id="Mtw-tW-cC0" customClass="UserListController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="aoO-X5-Zcg">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="contactCell" id="zQB-Gz-OZU" customClass="UserCellController" customModule="Random_Users" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zQB-Gz-OZU" id="TgL-Gh-TPN">
-                                    <rect key="frame" x="0.0" y="0.0" width="341" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="54" translatesAutoresizingMaskIntoConstraints="NO" id="QlU-QG-RiD">
-                                            <rect key="frame" x="16" y="0.0" width="317.5" height="43.5"/>
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="n3i-kk-LLM">
-                                                    <rect key="frame" x="0.0" y="0.0" width="80" height="43.5"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zng-Mh-aQe">
-                                                    <rect key="frame" x="134" y="0.0" width="51.5" height="43.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Surname" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rgz-eI-3oM">
-                                                    <rect key="frame" x="239.5" y="0.0" width="78" height="43.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </stackView>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="QlU-QG-RiD" secondAttribute="bottom" id="3Mr-CT-nXj"/>
-                                        <constraint firstItem="QlU-QG-RiD" firstAttribute="leading" secondItem="TgL-Gh-TPN" secondAttribute="leading" constant="16" id="QK4-Qt-erU"/>
-                                        <constraint firstAttribute="trailing" secondItem="QlU-QG-RiD" secondAttribute="trailing" constant="7.5" id="luU-7m-Ss5"/>
-                                        <constraint firstItem="QlU-QG-RiD" firstAttribute="top" secondItem="TgL-Gh-TPN" secondAttribute="top" id="qk8-1S-uVK"/>
-                                    </constraints>
-                                </tableViewCellContentView>
-                                <connections>
-                                    <outlet property="firstName" destination="zng-Mh-aQe" id="UzJ-cY-FjB"/>
-                                    <outlet property="surName" destination="rgz-eI-3oM" id="XD8-1C-TKG"/>
-                                    <outlet property="userThumbnail" destination="n3i-kk-LLM" id="Zwg-p3-1Hb"/>
-                                </connections>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="Mtw-tW-cC0" id="4XT-qn-AcU"/>
-                            <outlet property="delegate" destination="Mtw-tW-cC0" id="g4h-88-5Av"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" id="IMw-wf-tgT">
-                        <barButtonItem key="rightBarButtonItem" title="Add" id="OxP-1J-YAL">
-                            <connections>
-                                <segue destination="KKU-Y0-6WA" kind="show" identifier="detailSegue" id="b8T-N5-VSc"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="W9e-hH-ZmH" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="944.79999999999995" y="-178.56071964017991"/>
-        </scene>
-        <!--User Detail Controller-->
-        <scene sceneID="Y1S-VZ-WhE">
-            <objects>
-                <viewController id="KKU-Y0-6WA" customClass="UserDetailController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="oEP-0t-c8r">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="ZUJ-81-H7P">
-                                <rect key="frame" x="67.5" y="104" width="240" height="379.5"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="G6b-fl-5jH">
-                                        <rect key="frame" x="0.0" y="0.0" width="240" height="240"/>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gLe-ok-u2o">
-                                        <rect key="frame" x="0.0" y="262" width="240" height="32.5"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Hq-oN-cGw">
-                                        <rect key="frame" x="0.0" y="316.5" width="240" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dCj-wV-Y0d">
-                                        <rect key="frame" x="0.0" y="359" width="240" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="ZUJ-81-H7P" firstAttribute="centerX" secondItem="UYh-Is-SVK" secondAttribute="centerX" id="gzn-95-8Vy"/>
-                            <constraint firstItem="ZUJ-81-H7P" firstAttribute="top" secondItem="UYh-Is-SVK" secondAttribute="top" constant="40" id="rw9-78-PFy"/>
-                            <constraint firstItem="UYh-Is-SVK" firstAttribute="bottom" secondItem="ZUJ-81-H7P" secondAttribute="bottom" constant="183.5" id="vWg-2G-d6H"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="UYh-Is-SVK"/>
-                    </view>
-                    <connections>
-                        <outlet property="userEmail" destination="7Hq-oN-cGw" id="zwK-4a-Cau"/>
-                        <outlet property="userImage" destination="G6b-fl-5jH" id="318-ks-1fD"/>
-                        <outlet property="userName" destination="gLe-ok-u2o" id="2zQ-a9-lFT"/>
-                        <outlet property="userPhone" destination="dCj-wV-Y0d" id="VG7-cU-1wh"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="q9d-Pm-6s3" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1765.5999999999999" y="-179.46026986506749"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="gDw-z6-ZpO">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="94n-KI-rhX" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8TW-xR-Ea4">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="Mtw-tW-cC0" kind="relationship" relationship="rootViewController" id="KfD-Ng-LDS"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9Gp-VB-hso" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="5.5999999999999996" y="-178.56071964017991"/>
-        </scene>
-    </scenes>
+    <scenes/>
 </document>
